      wilcoxon_test.m
      z_test.m
      z_test_2.m

 ** The following image functions have been moved from core Octave to
    the image package available from Octave Forge.

    ntsc2rgb
    rgb2ntsc

 ** Other new functions added in 4.4:

      bounds
      camlookat
      camorbit
      campos
      camroll
      camtarget
      camup
      camva
      camzoom
      corrcoef
      erase
      gammaincinv
      getframe
      groot
      gsvd
      hgtransform
      humps
      integral
      integral2
      integral3
      isgraphics
      isstring
      mad
      openvar
      quad2d
      repelem
      rgb2gray
      rticks
      tfqmr
      thetaticks
      vecnorm
      winqueryreg
      xticklabels
      xticks
      yticklabels
      yticks
      zticklabels
      zticks

 ** Deprecated functions.

    The following functions have been deprecated in Octave 4.4 and will
    be removed from Octave 4.8 (or whatever version is the second major
    release after 4.4):

      Function             | Replacement
      ---------------------|------------------
      chop                 | sprintf for visual results
      desktop              | isguirunning
      toascii              | double

 ** The following functions were deprecated in Octave 4.0 and have been
    removed from Octave 4.4.

      allow_noninteger_range_as_index
      bicubic
      delaunay3
      do_braindead_shortcircuit_evaluation
      dump_prefs
      find_dir_in_path
      finite
      fmod
      fnmatch
      gmap40
      loadaudio
      luinc
      mouse_wheel_zoom
      nfields
      octave_tmp_file_name
      playaudio
      saveaudio
      setaudio
      syl
      usage

 ** The "Octave:undefined-return-values" warning ID is obsolete.  Octave
    now throws an error for any attempts to assign undefined values that
    might be returned from functions.

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been