@@ -5,6 +5,7 @@ FCN_FILE_DIRS += scripts/specfun
   %reldir%/betainc.m \
   %reldir%/betaincinv.m \
   %reldir%/betaln.m \
+  %reldir%/cosint.m \
   %reldir%/ellipke.m \
   %reldir%/expint.m \
   %reldir%/factor.m \
@@ -21,7 +22,8 @@ FCN_FILE_DIRS += scripts/specfun
   %reldir%/primes.m \
   %reldir%/reallog.m \
   %reldir%/realpow.m \
-  %reldir%/realsqrt.m
+  %reldir%/realsqrt.m \
+  %reldir%/sinint.m
 
 %canon_reldir%dir = $(fcnfiledir)/specfun
 
